hp hero buttons alignment fix

--- a/assets/public/css/backend.css
+++ b/assets/public/css/backend.css
@@ -4209,7 +4209,11 @@ div.margin-xl {
   align-items: center;
   width: -moz-fit-content;
   width: fit-content;
-  margin: 0 auto;
+}
+@media (max-width: 1199.5px) {
+  .hp-hero-section .il_section_inner .il_block_intro .buttons .il_btn {
+    margin: 0 auto;
+  }
 }
 @media (min-width: 1199.6px) {
   .hp-hero-section .il_section_inner .il_block_intro .buttons .il_btn {
